--- a/API/package.json
+++ b/API/package.json
@@ -4,7 +4,7 @@
   "description": "A simple meal booking app",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon --exec babel-node index.js"
   },
   "repository": {
     "type": "git",
@@ -17,6 +17,10 @@
   },
   "homepage": "https://github.com/Sirlam/Book-A-Meal#readme",
   "dependencies": {
+    "@babel/core": "^7.2.2",
+    "@babel/node": "^7.2.2",
+    "@babel/preset-env": "^7.3.1",
+    "babel-cli": "^6.26.0",
     "express": "^4.16.4"
   },
   "devDependencies": {
